--- a/index.html
+++ b/index.html
@@ -8,18 +8,18 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500;700;900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
       rel="stylesheet"
     />
     <script
       src="https://kit.fontawesome.com/63b32a4a89.js"
       crossorigin="anonymous"
     ></script>
-    <link
+    <title>Todo List</title>
+    <!-- <link
       rel="stylesheet"
       href="//cdn.jsdelivr.net/npm/font-applesdgothicneo@1.0/all.min.css"
-    />
-    <title>Todo List</title>
+    /> -->
     <!-- <script src="//cdn.jsdelivr.net/npm/eruda"></script>
     <script>
       eruda.init();
