--- a/index.html
+++ b/index.html
@@ -16,14 +16,10 @@
       crossorigin="anonymous"
     ></script>
     <title>Todo List</title>
-    <!-- <link
-      rel="stylesheet"
-      href="//cdn.jsdelivr.net/npm/font-applesdgothicneo@1.0/all.min.css"
-    /> -->
-    <!-- <script src="//cdn.jsdelivr.net/npm/eruda"></script>
+    <script src="//cdn.jsdelivr.net/npm/eruda"></script>
     <script>
       eruda.init();
-    </script> -->
+    </script>
   </head>
   <body>
     <script type="module" src="/src/main.ts"></script>
