--- a/index.html
+++ b/index.html
@@ -15,11 +15,7 @@
       src="https://kit.fontawesome.com/63b32a4a89.js"
       crossorigin="anonymous"
     ></script>
-    <title>Todo List</title>
-    <script src="//cdn.jsdelivr.net/npm/eruda"></script>
-    <script>
-      eruda.init();
-    </script>
+    <title>Material Form</title>
   </head>
   <body>
     <script type="module" src="/src/main.ts"></script>
