--- a/index.html
+++ b/index.html
@@ -16,8 +16,10 @@
       crossorigin="anonymous"
     ></script>
     <title>Material Form</title>
+    <script type="module" crossorigin src="/assets/index.5e040cc3.js"></script>
+    <link rel="stylesheet" href="/assets/index.765c9c93.css">
   </head>
   <body>
-    <script type="module" src="/src/main.ts"></script>
+    
   </body>
 </html>
