--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
       crossorigin="anonymous"
     ></script>
     <title>Material Form</title>
-    <script type="module" crossorigin src="/assets/index.5e040cc3.js"></script>
-    <link rel="stylesheet" href="/assets/index.765c9c93.css">
+    <script type="module" crossorigin src="/material-form/assets/index.5e040cc3.js"></script>
+    <link rel="stylesheet" href="/material-form/assets/index.765c9c93.css">
   </head>
   <body>
     
